--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -1,18 +1,25 @@
+html, body {
+  height: 100%;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  height: 100%;
 }
 
-#map {
-  width: 100vw;
-  height: 100vh;
+.grid-main {
+  height: 100%;
+}
+
+.grid-map {
+  height: 100%;
+
+}
+
+.grid-panel {
+  height: 100%;
+
 }
